# xjdpj

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
backend/: main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
src/: main.py
